# hermes-managed-network

./: .gitignore  LICENSE  MANIFEST.in  README.md  TASK.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: architecture-backlog.md  architecture-contract.md  architecture.md  component-architecture.md  deployment.md  docs-center.md  headscale-integration.md  managed-ops-summary-v1.1.md  node-lifecycle.md  orchestrator-branch-triage.md  permission-model.md  platform-architecture.md  playbooks.md  priority-execution-order.md  priority-plan.md  production-readiness.md  roadmap.md  security-model.md  useful-ops-mvp.md
docs/plans/: 2026-05-13-hmn-web-control-console.md  2026-05-13-hmn-web-docs-module.md
examples/: headscale-acl.hujson  sudoers-hermes
playbooks/: nginx-reload.yaml  restart-container.yaml
scripts/: install-master.sh  join.sh  smoke-headscale-network.sh  smoke-local-e2e.sh  smoke-nas-ipv6-lite-worker.sh  smoke-remote-e2e.sh  smoke-telegram-approval.sh  worker-lite.sh  worker-windows.ps1  worker.sh
scripts/service/: README.md
tests/: test_api.py  test_approval_api.py  test_approval_cli_dispatch.py  test_approval_gateway_abstraction.py  test_approval_notifications.py  test_approval_telegram_flow.py  test_architecture_docs.py  test_backup_provider.py  test_cli.py  test_components.py  test_config_provider.py  test_coolify_provider.py  test_deploy_cli.py  test_discover_uptime.py  test_discovery.py  test_docs.py  test_docs_generate.py  test_docs_sync.py  test_docs_sync_apply.py  test_executor.py  test_github_actions_provider.py  test_hmn_web_console.py  test_inspect.py  test_inventory.py  test_join_tokens.py  test_linux_install.py  test_migration_plan.py  test_monitor_cli.py  test_network_cli.py  test_notification_outbox.py  test_onboarding_plan.py  test_orchestrator_cli.py  test_orchestrator_persistence.py  test_p0_safety_closure.py  test_platforms.py  test_playbook.py  test_production_readiness_docs.py  test_provider_contract.py  test_restore_plan.py  test_service_discovery.py  (+13 more)
(+51 files in other folders)
