[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-managed-network"
version = "0.1.0"
description = "A secure control plane for agent-managed infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "liut-coder"}]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
