[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-managed-network"
version = "0.1.0"
description = "A secure control plane for agent-managed infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "liut-coder"}]
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "typer>=0.12",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[project.scripts]
hmn = "hermes_managed_network.cli:app"
hmn-server = "hermes_managed_network.server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
